Fix alignment of the scrip icon.

--- a/src/css/extension.css
+++ b/src/css/extension.css
@@ -1,5 +1,5 @@
 .scrip:before {
-    background: url("chrome-extension://__MSG_@@extension_id__/dist/images/icon-scrip.svg") -5px 0 no-repeat;
+    background: url("chrome-extension://__MSG_@@extension_id__/dist/images/icon-scrip.svg") -4px 0 no-repeat;
 }
 
 .scrip:before {
